# mind_sonic

./: .gitignore  README.md  pyproject.toml  report.md
docs/: DESIGN_PRINCIPLES.md  README.md  podcast_crew_tts_implementation.md  pptx_processing.md
documentation/: AGENT_CODE_OF_CONDUCT.md  CONFIGURATION.md  DESIGN_PRINCIPLES.md  INSTALLATION.md
src/mind_sonic/: main.py  models.py  rag_config.py
src/mind_sonic/config/: settings.py
src/mind_sonic/crews/indexer_crew/: indexer_crew.py
src/mind_sonic/crews/indexer_crew/config/: agents.yaml  tasks.yaml
src/mind_sonic/crews/podcast_crew/: podcast_crew.py
src/mind_sonic/crews/podcast_crew/config/: agents.yaml  tasks.yaml
src/mind_sonic/crews/poem_crew/config/: agents.yaml  tasks.yaml
src/mind_sonic/crews/research_crew/: research_crew.py
src/mind_sonic/crews/research_crew/config/: agents.yaml  tasks.yaml
src/mind_sonic/loaders/: pptx_chunker.py  pptx_loader.py
src/mind_sonic/tools/: __init__.py  custom_tool.py  elevenlabs_tts_tool.py  file_read_tool.py  openai_tts_tool.py  podcast_audio_generator_tool.py  save_to_rag_tool.py  yahoo_company_info_tool.py  yahoo_etf_holdings_tool.py  yahoo_history_tool.py  yahoo_news_tool.py  yahoo_ticker_info_tool.py
src/mind_sonic/utils/: file_archiver.py  file_finder.py  file_processor.py  file_type_utils.py  logging_utils.py
